--- a/HelpDesk v1/WebContent/menu.zul
+++ b/HelpDesk v1/WebContent/menu.zul
@@ -29,42 +29,6 @@ padding-bottom: 0;
     filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#fcfcfc', EndColorStr='#f1f1f1');
 }
 </style>
-<groupbox>
-
-<button label="Ištrinti duombazės duomenis">
-   <attribute name="onClick">
-        <![CDATA[	
-          services.DataControllServiceImpl dataControll = new services.DataControllServiceImpl();
-			dataControll.clearDB();
-          ]]>
-      </attribute>
-
-
-</button>
-  <button label="Importuoti duombaze" upload="true,maxsize=300">
-      <attribute name="onUpload">
-        <![CDATA[
-          org.zkoss.util.media.Media media = event.getMedia();
-          java.io.File myFile = new java.io.File(media.getName());
-          mainControllers.IndexController ic = new mainControllers.IndexController();          
-          ic.ImportDataBase(myFile.getAbsolutePath());
-        ]]>
-      </attribute>
-    </button>
-    
-      <button label="eksportuoti">
-      <attribute name="onClick">
-        <![CDATA[	
-          mainControllers.IndexController ic = new mainControllers.IndexController();  
-
-          if(ic.Export().exists()) { Filedownload.save(ic.Export() ,"null"); }
-          else
-          	System.out.print("Neegzistuoja\n");
-		  
-        ]]>
-      </attribute>
-    </button>
-	</groupbox>		
 
 <div sclass="z-toolbar" style="padding:0">
 <hbox pack="stretch" sclass="hboxRemoveWhiteStrips" width="100%">
@@ -94,7 +58,7 @@ padding-bottom: 0;
 			</timer>
 		</cell>
         -->
-		<toolbarbutton image="/img/time.png" href="timer.zul" label="Sistemos laikas: laikas" id="time" />           
+		<toolbarbutton image="/img/time.png" href="profileAdmin.zul" label="Sistemos laikas: laikas" id="time" />          
 		<toolbarbutton image="/img/profile.png" label="Profilis" id="profile">
 		 <attribute name="onClick">
         <![CDATA[	
