--- a/HelpDesk v1/WebContent/profileAdmin.zul
+++ b/HelpDesk v1/WebContent/profileAdmin.zul
@@ -92,12 +92,11 @@ else
 Dabartinis laikas:
 <timer id="timer2" delay="1000" repeats="true">
     <attribute name="onTimer">
- Locale locale = org.zkoss.util.Locales.getCurrent();
- java.text.DateFormat dateFormat = java.text.DateFormat.getDateTimeInstance(
-   java.text.DateFormat.MEDIUM, java.text.DateFormat.MEDIUM, locale);
- String strTime = dateFormat.format(java.util.Calendar.getInstance(locale)
-   .getTime());
- timer.setValue(strTime);
+    {
+import java.text.SimpleDateFormat;
+    		SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
+ timer.setValue(sdf.format(mainControllers.IndexController.getDate()));
+ }
 </attribute>
    </timer>
 <label id="timer" width="33%" /> 
@@ -105,53 +104,19 @@ Dabartinis laikas:
 <groupbox title="Laiko nustatymas">
 <vbox>
 <hbox>
-<datebox id="db2" cols="12" format="medium" onCreate="self.value = new Date()">
-              <attribute name="onChange">
-        <![CDATA[	
-Runtime rt = Runtime.getRuntime();
-rt.exec("runas /profile /user:Administrator \"cmd.exe /c Powrprof.dll,SetSuspendState\"");
-rt.exec("cmd /C date 19-02-17");
-
-            
-              //   System.out.println( d ); 
-//          System.out.print((db2.getValue().getTime()+tb2.getValue().getTime())+"\n");
-//          System.currentTimeMillis((db2.getValue().getTime()+tb2.getValue().getTime()));
-//          System.
-        ]]>
-      </attribute>
-      </datebox>
-            <timebox id="tb2" cols="12" format="medium" onCreate="self.value = new Date()">
-              <attribute name="onChange">
-        <![CDATA[	
-try {
-    // Execute command
-    String command = "cmd /c start cmd.exe";
-    Process child = Runtime.getRuntime().exec(command);
-
-    // Get output stream to write from it
-    OutputStream out = child.getOutputStream();
-
-    out.write("cd C:/ /r/n".getBytes());
-    out.flush();
-    out.write("dir /r/n".getBytes());
-    out.close();
-} catch (IOException e) {
-}
-        ]]>
-      </attribute>
-            </timebox>
+            <datebox id="tb2" cols="40" format="long+medium" onCreate="self.value = new Date()"/>
 </hbox>
 
           <button label="Išsaugoti">
       <attribute name="onClick">
         <![CDATA[	
-          mainControllers.IndexController ic = new mainControllers.IndexController();  
-if(l1.isChecked() || l2.isChecked())
-          if(ic.Export(l1.isChecked(), l2.isChecked()).exists()) { Filedownload.save(ic.Export(l1.isChecked(), l2.isChecked()) ,"null"); }
-          else
-          	System.out.print("Neegzistuoja\n");
-else
-	Clients.showNotification("Nepasirinkta nei viena ataskaita.", Clients.NOTIFICATION_TYPE_ERROR, null, "middle_center", 50000, true);
+                 if(!(mainControllers.IndexController.getDate() == null))
+                 {
+           			//mainControllers.IndexController.setDate(tb2.getValue().getHours());
+                	 mainControllers.IndexController.setDate(tb2.getValue());
+
+                 }
+	//Clients.showNotification("Nepasirinkta nei viena ataskaita.", Clients.NOTIFICATION_TYPE_ERROR, null, "middle_center", 50000, true);
 
 		  
         ]]>
